--- a/config.sample.yml
+++ b/config.sample.yml
@@ -5,8 +5,22 @@
 # https://docs.requarks.io/wiki/install
 
 # ---------------------------------------------------------------------
-# Port the main server should listen to
+# Title of this site
 # ---------------------------------------------------------------------
+
+title: Wiki
+
+# ---------------------------------------------------------------------
+# Full public path to the site, without the trailing slash
+# ---------------------------------------------------------------------
+# INCLUDE CLIENT PORT IF NOT 80/443!
+
+host: http://localhost
+
+# ---------------------------------------------------------------------
+# Port the main server should listen to (80 by default)
+# ---------------------------------------------------------------------
+# To use process.env.PORT, comment the line below:
 
 port: 80
 
@@ -19,38 +33,140 @@ paths:
   data: ./data
 
 # ---------------------------------------------------------------------
-# Database
+# Upload Limits
 # ---------------------------------------------------------------------
+# In megabytes (MB)
 
-db:
-  host: localhost
-  port: 5432
-  user: wikijs
-  pass: wikijsrocks
-  db: wiki
+uploads:
+  maxImageFileSize: 3
+  maxOtherFileSize: 100
 
 # ---------------------------------------------------------------------
-# Redis
+# Site Language
 # ---------------------------------------------------------------------
+# Possible values: en, de, es, fa, fr, ja, ko, nl, pt, ru, sr, tr or zh
 
-redis:
-  host: localhost
-  port: 6379
-  db: 0
-  password: null
+lang: en
 
-# ---------------------------------------------------------------------
-# Background Workers
-# ---------------------------------------------------------------------
-# Leave 0 for auto based on CPU cores
-
-workers: 0
+# Enable for right to left languages (e.g. arabic):
+langRtl: false
 
 # ---------------------------------------------------------------------
-# High Availability
+# Site Authentication
 # ---------------------------------------------------------------------
-# Read the docs BEFORE changing these settings!
 
-ha:
-  nodeuid: primary
-  readonly: false
+public: false
+
+auth:
+  defaultReadAccess: false
+  local:
+    enabled: true
+  google:
+    enabled: true
+    clientId: GOOGLE_CLIENT_ID
+    clientSecret: GOOGLE_CLIENT_SECRET
+  microsoft:
+    enabled: true
+    clientId: MS_APP_ID
+    clientSecret: MS_APP_SECRET
+  facebook:
+    enabled: false
+    clientId: FACEBOOK_APP_ID
+    clientSecret: FACEBOOK_APP_SECRET
+  github:
+    enabled: false
+    clientId: GITHUB_CLIENT_ID
+    clientSecret: GITHUB_CLIENT_SECRET
+  slack:
+    enabled: false
+    clientId: 'SLACK_CLIENT_ID'
+    clientSecret: 'SLACK_CLIENT_SECRET'
+  ldap:
+    enabled: false
+    url: ldap://serverhost:389
+    bindDn: cn='root'
+    bindCredentials: BIND_PASSWORD
+    searchBase: o=users,o=example.com
+    searchFilter: (uid={{username}})
+    tlsEnabled: false
+    tlsCertPath: C:\example\root_ca_cert.crt
+  azure:
+    enabled: false
+    clientId: APP_ID
+    clientSecret: APP_SECRET_KEY
+    resource: '00000002-0000-0000-c000-000000000000'
+    tenant: 'YOUR_TENANT.onmicrosoft.com'
+
+# ---------------------------------------------------------------------
+# Secret key to use when encrypting sessions
+# ---------------------------------------------------------------------
+# Use a long and unique random string (256-bit keys are perfect!)
+
+sessionSecret: 1234567890abcdefghijklmnopqrstuvxyz
+
+# ---------------------------------------------------------------------
+# Database Connection String
+# ---------------------------------------------------------------------
+# You can also use an ENV variable by using $ENV_VAR_NAME as the value
+
+db: mongodb://localhost:27017/wiki
+
+# ---------------------------------------------------------------------
+# Git Connection Info
+# ---------------------------------------------------------------------
+
+git:
+  url: https://github.com/Organization/Repo
+  branch: master
+  auth:
+
+    # Type: basic or ssh
+    type: ssh
+
+    # Only for Basic authentication:
+    username: marty
+    password: MartyMcFly88
+
+    # Only for SSH authentication:
+    privateKey: /etc/wiki/keys/git.pem
+
+    sslVerify: true
+
+  # Default email to use as commit author
+  serverEmail: marty@example.com
+
+  # Whether to use user email as author in commits
+  showUserEmail: true
+
+# ---------------------------------------------------------------------
+# Features
+# ---------------------------------------------------------------------
+# You can enable / disable specific features below
+
+features:
+  linebreaks: true
+  mathjax: true
+
+# ---------------------------------------------------------------------
+# External Logging
+# ---------------------------------------------------------------------
+
+externalLogging:
+  bugsnag: false
+  loggly: false
+  papertrail: false
+  rollbar: false
+  sentry: false
+
+# ---------------------------------------------------------------------
+# Color Theme
+# ---------------------------------------------------------------------
+
+theme:
+  primary: indigo
+  alt: blue-grey
+  viewSource: all # all | write | false
+  footer: blue-grey
+  code:
+    dark: true
+    colorize: true
