--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "restart": "node wiki restart",
     "build": "node tools/fuse",
     "dev": "node tools/fuse -d",
-    "test": "jest",
-    "postinstall": "opencollective postinstall"
+    "test": "jest"
   },
   "bin": {
     "wiki": "wiki.js"
@@ -34,17 +33,17 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=6.11.1"
+    "node": ">=8.8.1"
   },
   "dependencies": {
-    "apollo-server-express": "1.1.3",
+    "apollo-server-express": "1.2.0",
     "auto-load": "3.0.0",
-    "axios": "0.16.2",
+    "axios": "0.17.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
-    "bugsnag": "2.0.0",
-    "bull": "3.3.0",
+    "bugsnag": "2.0.1",
+    "bull": "3.3.5",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -53,30 +52,30 @@
     "connect-flash": "0.1.1",
     "connect-redis": "3.3.2",
     "cookie-parser": "1.4.3",
-    "diff2html": "2.3.1",
+    "diff2html": "2.3.2",
     "dotize": "^0.2.0",
     "execa": "0.8.0",
-    "express": "4.16.1",
+    "express": "4.16.2",
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
-    "file-type": "6.2.0",
+    "file-type": "7.2.0",
     "filesize.js": "1.0.2",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.2",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.10.5",
-    "graphql-tools": "2.2.1",
+    "graphql": "0.11.7",
+    "graphql-tools": "2.6.1",
     "highlight.js": "9.12.0",
-    "i18next": "9.1.0",
+    "i18next": "10.0.3",
     "i18next-express-middleware": "1.0.7",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.1",
-    "ioredis": "3.1.4",
+    "ioredis": "3.2.1",
     "jimp": "0.2.28",
     "js-yaml": "3.10.0",
-    "jsonwebtoken": "8.0.1",
+    "jsonwebtoken": "8.1.0",
     "klaw": "2.1.0",
     "lodash": "4.17.4",
     "markdown-it": "8.4.0",
@@ -88,11 +87,12 @@
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.1",
     "markdown-it-mathjax": "2.0.0",
-    "markdown-it-task-lists": "2.0.1",
+    "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "1.2.1",
     "mime-types": "2.1.17",
-    "moment": "2.18.1",
+    "moment": "2.19.1",
     "moment-timezone": "0.5.13",
+    "mongodb": "2.2.33",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
     "node-graceful": "0.2.3",
@@ -106,76 +106,73 @@
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
-    "pg": "6.4.2",
+    "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "6.10.3",
-    "pm2": "2.7.1",
+    "pg-promise": "7.0.3",
+    "pm2": "2.7.2",
     "pug": "2.0.0-rc.4",
     "qr-image": "3.2.0",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.83.0",
     "semver": "5.4.1",
-    "sequelize": "4.13.5",
+    "sequelize": "4.19.0",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
     "stream-to-promise": "2.2.0",
-    "tar": "4.0.1",
+    "tar": "4.0.2",
     "through2": "2.0.3",
     "uuid": "3.1.0",
-    "validator": "9.0.0",
+    "validator": "9.1.1",
     "validator-as-promised": "1.0.2",
     "winston": "2.4.0",
-    "yargs": "9.0.1"
+    "yargs": "10.0.3"
   },
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
-    "@panter/vue-i18next": "0.6.1",
-    "apollo-client": "^1.9.3",
-    "autoprefixer": "7.1.5",
+    "@panter/vue-i18next": "0.8.0",
+    "apollo-client-preset": "1.0.1",
+    "autoprefixer": "7.1.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-jest": "21.2.0",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.10.0",
     "colors": "1.1.2",
     "consolidate": "0.14.5",
-    "eslint": "4.8.0",
+    "eslint": "4.10.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "10.2.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.2.0",
-    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "fuse-box": "2.3.3",
-    "graphql-tag": "^2.4.2",
+    "fuse-box": "2.4.0",
+    "graphql-tag": "^2.5.0",
     "i18next-xhr-backend": "1.4.3",
     "jest": "21.2.1",
     "jest-junit": "3.1.0",
-    "jquery": "3.2.1",
-    "jquery-contextmenu": "2.6.2",
-    "jquery-simple-upload": "1.0.0",
-    "js-cookie": "2.1.4",
+    "js-cookie": "2.2.0",
     "node-sass": "4.5.3",
     "nodemon": "1.12.1",
-    "postcss-selector-parser": "2.2.3",
+    "postcss-selector-parser": "3.1.0",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.5.3",
-    "uglify-es": "3.1.3",
-    "vee-validate": "2.0.0-rc.18",
-    "vue": "2.4.4",
+    "uglify-es": "3.1.5",
+    "vee-validate": "2.0.0-rc.19",
+    "vue": "2.5.2",
     "vue-clipboards": "1.1.0",
-    "vue-hot-reload-api": "2.1.1",
+    "vue-hot-reload-api": "2.2.0",
     "vue-lodash": "1.0.4",
-    "vue-material": "^0.7.5",
+    "vue-material": "^0.8.1",
     "vue-resource": "1.3.4",
-    "vue-simple-breakpoints": "1.0.2",
-    "vue-template-compiler": "2.4.4",
-    "vue-template-es2015-compiler": "1.5.3",
-    "vuex": "2.4.1",
+    "vue-simple-breakpoints": "1.0.3",
+    "vue-template-compiler": "2.5.2",
+    "vue-template-es2015-compiler": "1.6.0",
+    "vuex": "3.0.0",
     "vuex-persistedstate": "2.0.0"
   },
   "jest": {
