--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   "dependencies": {
     "apollo-server-express": "1.2.0",
     "auto-load": "3.0.0",
-    "axios": "0.17.0",
+    "axios": "0.17.1",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "bugsnag": "2.0.1",
-    "bull": "3.3.5",
+    "bull": "3.3.6",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -65,9 +65,9 @@
     "fs-extra": "4.0.2",
     "git-wrapper2-promise": "0.2.9",
     "graphql": "0.11.7",
-    "graphql-tools": "2.6.1",
+    "graphql-tools": "2.7.2",
     "highlight.js": "9.12.0",
-    "i18next": "10.0.3",
+    "i18next": "10.0.7",
     "i18next-express-middleware": "1.0.7",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
@@ -90,8 +90,8 @@
     "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "1.2.1",
     "mime-types": "2.1.17",
-    "moment": "2.19.1",
-    "moment-timezone": "0.5.13",
+    "moment": "2.19.2",
+    "moment-timezone": "0.5.14",
     "mongodb": "2.2.33",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
@@ -106,9 +106,9 @@
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
-    "pg": "7.3.0",
+    "pg": "7.4.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "7.0.3",
+    "pg-promise": "7.3.1",
     "pm2": "2.7.2",
     "pug": "2.0.0-rc.4",
     "qr-image": "3.2.0",
@@ -116,7 +116,7 @@
     "remove-markdown": "0.2.2",
     "request": "2.83.0",
     "semver": "5.4.1",
-    "sequelize": "4.19.0",
+    "sequelize": "4.22.6",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
     "stream-to-promise": "2.2.0",
@@ -130,8 +130,8 @@
   },
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
-    "@panter/vue-i18next": "0.8.0",
-    "apollo-client-preset": "1.0.1",
+    "@panter/vue-i18next": "0.8.1",
+    "apollo-client-preset": "1.0.2",
     "autoprefixer": "7.1.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
@@ -141,8 +141,8 @@
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.10.0",
     "colors": "1.1.2",
-    "consolidate": "0.14.5",
-    "eslint": "4.10.0",
+    "consolidate": "0.15.0",
+    "eslint": "4.11.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
@@ -150,31 +150,31 @@
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "3.13.1",
-    "fuse-box": "2.4.0",
+    "fuse-box": "2.5.0-beta.1",
     "graphql-tag": "^2.5.0",
-    "i18next-xhr-backend": "1.4.3",
+    "i18next-xhr-backend": "1.5.0",
     "jest": "21.2.1",
     "jest-junit": "3.1.0",
     "js-cookie": "2.2.0",
-    "node-sass": "4.5.3",
+    "node-sass": "4.6.1",
     "nodemon": "1.12.1",
-    "postcss-selector-parser": "3.1.0",
+    "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
-    "typescript": "2.5.3",
-    "uglify-es": "3.1.5",
-    "vee-validate": "2.0.0-rc.19",
-    "vue": "2.5.2",
+    "typescript": "2.6.1",
+    "uglify-es": "3.1.9",
+    "vee-validate": "2.0.0-rc.21",
+    "vue": "2.5.3",
     "vue-clipboards": "1.1.0",
-    "vue-hot-reload-api": "2.2.0",
+    "vue-hot-reload-api": "2.2.3",
     "vue-lodash": "1.0.4",
     "vue-material": "^0.8.1",
     "vue-resource": "1.3.4",
     "vue-simple-breakpoints": "1.0.3",
-    "vue-template-compiler": "2.5.2",
+    "vue-template-compiler": "2.5.3",
     "vue-template-es2015-compiler": "1.6.0",
-    "vuex": "3.0.0",
-    "vuex-persistedstate": "2.0.0"
+    "vuex": "3.0.1",
+    "vuex-persistedstate": "2.3.2"
   },
   "jest": {
     "testResultsProcessor": "./node_modules/jest-junit",
