--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=8.9.3"
+    "node": ">=8.11"
   },
   "dependencies": {
     "apollo-server-express": "1.3.6",
@@ -43,7 +43,7 @@
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
-    "bugsnag": "2.3.1",
+    "bugsnag": "2.4.0",
     "bull": "3.4.2",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -67,22 +67,22 @@
     "getos": "3.1.0",
     "graphql": "0.13.2",
     "graphql-list-fields": "2.0.2",
-    "graphql-tools": "3.0.1",
+    "graphql-tools": "3.0.2",
     "i18next": "11.3.2",
     "i18next-express-middleware": "1.1.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.2",
     "ioredis": "3.2.2",
-    "js-yaml": "3.11.0",
-    "jsonwebtoken": "8.2.1",
+    "js-yaml": "3.12.0",
+    "jsonwebtoken": "8.2.2",
     "klaw": "2.1.1",
     "knex": "0.14.6",
     "lodash": "4.17.10",
     "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "4.0.0",
-    "markdown-it-attrs": "2.0.0",
+    "markdown-it-attrs": "2.1.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
@@ -95,7 +95,7 @@
     "markdown-it-task-lists": "2.1.1",
     "mathjax-node": "2.1.0",
     "mime-types": "2.1.18",
-    "moment": "2.22.1",
+    "moment": "2.22.2",
     "moment-timezone": "0.5.17",
     "mongodb": "3.1.0-beta4",
     "mssql": "4.1.0",
@@ -103,7 +103,7 @@
     "mysql2": "1.5.3",
     "node-2fa": "1.1.2",
     "oauth2orize": "1.11.0",
-    "objection": "1.1.8",
+    "objection": "1.1.10",
     "ora": "2.1.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
@@ -126,8 +126,8 @@
     "qr-image": "3.2.0",
     "raven": "2.6.2",
     "read-chunk": "2.1.0",
-    "remove-markdown": "0.2.2",
-    "request": "2.86.0",
+    "remove-markdown": "0.3.0",
+    "request": "2.87.0",
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
@@ -140,28 +140,31 @@
     "yargs": "11.0.0"
   },
   "devDependencies": {
-    "@panter/vue-i18next": "0.9.1",
-    "@vue/cli": "3.0.0-beta.10",
-    "apollo-client-preset": "1.0.8",
+    "@panter/vue-i18next": "0.11.0",
+    "@vue/cli": "3.0.0-beta.15",
+    "apollo-cache-inmemory": "1.2.2",
+    "apollo-client": "2.3.2",
     "apollo-fetch": "0.7.0",
+    "apollo-link": "1.2.2",
     "apollo-link-batch-http": "1.2.2",
-    "autoprefixer": "8.5.0",
+    "apollo-link-error": "1.0.9",
+    "apollo-link-http": "1.5.4",
+    "autoprefixer": "8.6.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.3",
-    "babel-jest": "23.0.0-alpha.0",
+    "babel-jest": "23.0.1",
     "babel-loader": "7.1.4",
     "babel-plugin-graphql-tag": "1.6.0",
     "babel-plugin-lodash": "3.3.2",
     "babel-plugin-transform-imports": "1.5.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.11.1",
     "cache-loader": "1.2.2",
     "clean-webpack-plugin": "0.1.19",
-    "colors": "1.2.5",
+    "colors": "1.3.0",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
     "cssnano": "4.0.0-rc.2",
@@ -171,7 +174,7 @@
     "eslint-config-standard": "11.0.0",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-promise": "3.8.0",
     "eslint-plugin-standard": "3.1.0",
     "eslint-plugin-vue": "4.5.0",
     "file-loader": "1.1.11",
@@ -183,27 +186,28 @@
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "22.4.4",
-    "jest-junit": "4.0.0",
+    "jest": "23.1.0",
+    "jest-junit": "5.0.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.4.0",
     "node-sass": "4.9.0",
-    "offline-plugin": "5.0.3",
-    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "offline-plugin": "5.0.5",
+    "optimize-css-assets-webpack-plugin": "4.0.2",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.1",
     "postcss-flexibility": "2.0.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
+    "postcss-preset-env": "5.1.0",
     "postcss-selector-parser": "5.0.0-rc.3",
     "pug-lint": "2.5.0",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "sass-loader": "7.0.1",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
+    "sass-loader": "7.0.2",
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -211,15 +215,16 @@
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "vee-validate": "2.0.9",
+    "url-loader": "1.0.1",
+    "vee-validate": "2.1.0-beta.1",
     "velocity-animate": "1.5.1",
     "vue": "2.5.16",
-    "vue-apollo": "3.0.0-beta.5",
+    "vue-apollo": "3.0.0-beta.16",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
-    "vue-loader": "15.1.0",
-    "vue-material-design-icons": "1.4.0",
+    "vue-loader": "15.2.4",
+    "vue-material-design-icons": "1.5.1",
     "vue-moment": "4.0.0-0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
@@ -227,9 +232,9 @@
     "vuetify": "1.0.18",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.8.3",
-    "webpack-bundle-analyzer": "2.12.0",
-    "webpack-cli": "2.1.3",
+    "webpack": "4.10.2",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "3.0.1",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
     "webpack-merge": "4.1.2",
@@ -271,7 +276,8 @@
         ]
       },
       "postcss-flexbugs-fixes": {},
-      "postcss-flexibility": {}
+      "postcss-flexibility": {},
+      "postcss-preset-env": {}
     }
   },
   "pugLintConfig": {
@@ -289,24 +295,6 @@
     "validateAttributeSeparator": ", ",
     "validateDivTags": true,
     "validateIndentation": 2
-  },
-  "nodemonConfig": {
-    "exec": "node server --dev",
-    "ignore": [
-      "assets/",
-      "client/",
-      "data/",
-      "dev/",
-      "test/",
-      "test-results/"
-    ],
-    "ext": "js json graphql",
-    "watch": [
-      "server"
-    ],
-    "env": {
-      "NODE_ENV": "development"
-    }
   },
   "collective": {
     "type": "opencollective",
