--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.11.1",
     "cache-loader": "1.2.2",
+    "chart.js": "2.7.2",
     "clean-webpack-plugin": "0.1.19",
     "colors": "1.3.0",
     "copy-webpack-plugin": "4.5.1",
@@ -220,6 +221,7 @@
     "velocity-animate": "1.5.1",
     "vue": "2.5.16",
     "vue-apollo": "3.0.0-beta.16",
+    "vue-chartjs": "3.3.1",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
