--- a/.babelrc
+++ b/.babelrc
@@ -20,7 +20,9 @@
   ],
   "presets": [
     [
-      "@babel/preset-env"
+      "@babel/preset-env", {
+        "useBuiltIns": "entry"
+      }
     ]
   ]
 }
