--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "node": ">=10.10"
   },
   "dependencies": {
-    "apollo-server": "2.0.7",
-    "apollo-server-express": "2.0.6",
+    "apollo-server": "2.1.0",
+    "apollo-server-express": "2.1.0",
     "auto-load": "3.0.1",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
@@ -56,7 +56,7 @@
     "child-process-promise": "2.2.1",
     "chokidar": "2.0.4",
     "compression": "1.7.3",
-    "connect-redis": "3.3.3",
+    "connect-redis": "3.4.0",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
     "dependency-graph": "0.7.2",
@@ -69,15 +69,15 @@
     "express-session": "1.15.6",
     "file-type": "9.0.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.5.7",
+    "follow-redirects": "1.5.8",
     "fs-extra": "7.0.0",
     "getos": "3.1.0",
     "graphql": "14.0.2",
     "graphql-list-fields": "2.0.2",
-    "graphql-tools": "3.1.1",
+    "graphql-tools": "4.0.0",
     "highlight.js": "9.12.0",
-    "i18next": "11.7.0",
-    "i18next-express-middleware": "1.3.2",
+    "i18next": "11.9.0",
+    "i18next-express-middleware": "1.4.0",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "2.1.0",
     "image-size": "0.6.3",
@@ -87,11 +87,11 @@
     "jsonwebtoken": "8.3.0",
     "klaw": "3.0.0",
     "knex": "0.15.2",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "markdown-it": "8.4.2",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "5.0.2",
-    "markdown-it-attrs": "2.3.1",
+    "markdown-it-attrs": "2.3.2",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
@@ -106,14 +106,14 @@
     "mime-types": "2.1.20",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.4",
-    "mssql": "4.1.0",
-    "multer": "1.3.1",
+    "mongodb": "3.1.6",
+    "mssql": "4.2.1",
+    "multer": "1.4.0",
     "mysql2": "1.6.1",
     "node-2fa": "1.1.2",
     "node-cache": "4.2.0",
     "oauth2orize": "1.11.0",
-    "objection": "1.2.6",
+    "objection": "1.3.0",
     "ora": "3.0.0",
     "passport": "0.4.0",
     "passport-auth0": "1.0.0",
@@ -124,7 +124,7 @@
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.11",
     "passport-google-oauth20": "1.0.0",
-    "passport-ldapauth": "2.0.0",
+    "passport-ldapauth": "2.1.0",
     "passport-local": "1.0.0",
     "passport-oauth2": "1.4.0",
     "passport-okta-oauth": "0.0.1",
@@ -135,7 +135,7 @@
     "passport-windowslive": "1.0.2",
     "pg": "7.4.3",
     "pg-hstore": "2.3.2",
-    "pm2": "3.0.4",
+    "pm2": "3.1.3",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "raven": "2.6.4",
@@ -149,40 +149,40 @@
     "sqlite3": "4.0.2",
     "uslug": "1.0.4",
     "uuid": "3.3.2",
-    "validator": "10.7.1",
+    "validator": "10.8.0",
     "validator-as-promised": "1.0.2",
     "winston": "3.1.0",
     "yargs": "12.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.1.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
     "@babel/plugin-proposal-numeric-separator": "^7.0.0",
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@panter/vue-i18next": "0.12.0",
-    "@vue/cli": "3.0.1",
+    "@babel/preset-env": "^7.1.0",
+    "@panter/vue-i18next": "0.13.0",
+    "@vue/cli": "3.0.4",
     "animated-number-vue": "0.1.3",
-    "apollo-cache-inmemory": "1.2.9",
-    "apollo-client": "2.4.1",
+    "apollo-cache-inmemory": "1.3.0",
+    "apollo-client": "2.4.2",
     "apollo-fetch": "0.7.0",
-    "apollo-link": "1.2.2",
-    "apollo-link-batch-http": "1.2.2",
-    "apollo-link-error": "1.1.0",
-    "apollo-link-http": "1.5.4",
+    "apollo-link": "1.2.3",
+    "apollo-link-batch-http": "1.2.3",
+    "apollo-link-error": "1.1.1",
+    "apollo-link-http": "1.5.5",
     "apollo-link-persisted-queries": "0.2.1",
     "autoprefixer": "9.1.5",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.4.2",
-    "babel-loader": "^8.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-graphql-tag": "1.6.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-imports": "1.5.1",
@@ -192,10 +192,10 @@
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "1.0.0",
-    "cssnano": "4.1.0",
+    "cssnano": "4.1.4",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.0.3",
-    "eslint": "5.5.0",
+    "eslint": "5.6.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
@@ -204,18 +204,18 @@
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "4.7.1",
     "file-loader": "2.0.0",
-    "grapesjs": "0.14.29",
-    "graphiql": "0.11.11",
+    "grapesjs": "0.14.33",
+    "graphiql": "0.12.0",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.9.2",
-    "graphql-voyager": "1.0.0-rc.19",
+    "graphql-voyager": "1.0.0-rc.25",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
     "js-cookie": "2.2.0",
-    "mini-css-extract-plugin": "0.4.2",
+    "mini-css-extract-plugin": "0.4.3",
     "node-sass": "4.9.3",
     "offline-plugin": "5.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -224,14 +224,14 @@
     "postcss-flexibility": "2.0.0",
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "5.3.0",
+    "postcss-preset-env": "6.0.7",
     "postcss-selector-parser": "5.0.0-rc.3",
     "pug-lint": "2.5.0",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "sass-resources-loader": "1.3.3",
@@ -242,15 +242,16 @@
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
     "url-loader": "1.1.1",
-    "vee-validate": "2.1.0-beta.8",
+    "vee-validate": "2.1.0-beta.9",
     "velocity-animate": "1.5.2",
+    "viz.js": "2.0.0",
     "vue": "2.5.17",
-    "vue-apollo": "3.0.0-beta.24",
+    "vue-apollo": "3.0.0-beta.25",
     "vue-chartjs": "3.4.0",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
-    "vue-hot-reload-api": "2.3.0",
-    "vue-loader": "15.4.1",
+    "vue-hot-reload-api": "2.3.1",
+    "vue-loader": "15.4.2",
     "vue-material-design-icons": "2.1.1",
     "vue-moment": "4.0.0",
     "vue-router": "3.0.1",
@@ -260,18 +261,19 @@
     "vue-tour": "1.0.1",
     "vue-tree-navigation": "3.0.1",
     "vuedraggable": "2.16.0",
-    "vuetify": "1.2.3",
+    "vuetify": "1.2.5",
     "vuex": "3.0.1",
     "vuex-pathify": "1.1.3",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.17.2",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-middleware": "3.2.0",
-    "webpack-hot-middleware": "2.23.1",
+    "webpack": "4.20.2",
+    "webpack-bundle-analyzer": "3.0.2",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.2",
     "webpack-merge": "4.1.4",
-    "whatwg-fetch": "2.0.4",
-    "write-file-webpack-plugin": "4.4.0",
+    "webpack-subresource-integrity": "1.1.0-rc.6",
+    "whatwg-fetch": "3.0.0",
+    "write-file-webpack-plugin": "4.4.1",
     "xterm": "3.7.0"
   },
   "browserslist": [
